force-app/main/default/objects/Log_Entry__c/Log_Entry__c.object-meta.xml
<CustomObject>
    <label>Log Entry</label>
    <nameField>
        <displayFormat>ENTRY-{000000000}</displayFormat>
        <label>Log Entrie Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>