force-app/main/default/objects/Log_Entry__c/fields/Event_Log__c.field-meta.xml
<CustomField>
    <fullName>Event_Log__c</fullName>
    <label>Event Log</label>
    <referenceTo>Event_Log__c</referenceTo>
    <relationshipLabel>Log Entries</relationshipLabel>
    <relationshipName>Log_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>