force-app/main/default/objects/Log_Entry__c/fields/Executing_User__c.field-meta.xml
<CustomField>
    <fullName>Executing_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executing User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Log_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>