force-app/main/default/objects/Log_Entry__c/fields/json_relatedRecords__c.field-meta.xml
<CustomField>
    <fullName>json_relatedRecords__c</fullName>
    <label>Related Record(s)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>