force-app/main/default/objects/Log_Entry__c/fields/logging_level__c.field-meta.xml
<CustomField>
    <fullName>logging_level__c</fullName>
    <description>ERROR, WARNING, INFO, DEBUG</description>
    <label>Logging Level</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>