force-app/main/default/objects/Log_Entry__c/fields/source__c.field-meta.xml
<CustomField>
    <fullName>source__c</fullName>
    <description>Source Process or Class</description>
    <label>Source</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>