force-app/main/default/objects/Log_Entry__c/fields/userId__c.field-meta.xml
<CustomField>
    <fullName>userId__c</fullName>
    <label>UserId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>