force-app/main/default/objects/Log_Entry__c/validationRules/EnforceValue.validationRule-meta.xml
<ValidationRule>
    <fullName>EnforceValue</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    logging_level__c &lt;&gt; &apos;ERROR&apos;,
    logging_level__c &lt;&gt; &apos;WARN&apos;,
    logging_level__c &lt;&gt; &apos;INFO&apos;,
    logging_level__c &lt;&gt; &apos;DEBUG&apos;
)</errorConditionFormula>
    <errorDisplayField>logging_level__c</errorDisplayField>
    <errorMessage>Must be ERROR, WARN, INFO, DEBUG</errorMessage>
</ValidationRule>