force-app/main/default/objects/Log_Entry__c/validationRules/PreventChangeEventLog.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventChangeEventLog</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Event_Log__c), NOT(ISNEW()))</errorConditionFormula>
    <errorDisplayField>Event_Log__c</errorDisplayField>
    <errorMessage>Event Log value cannot be changed after record is created.</errorMessage>
</ValidationRule>