force-app/main/default/objects/Log_Entry__c/validationRules/PreventChangeLoggingLevel.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventChangeLoggingLevel</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(logging_level__c), NOT(ISNEW()))</errorConditionFormula>
    <errorDisplayField>logging_level__c</errorDisplayField>
    <errorMessage>Logging Level cannot be changed after record is created.</errorMessage>
</ValidationRule>