force-app/main/default/objects/Log_Entry__c/validationRules/PreventChangeSource.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventChangeSource</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(source__c), NOT(ISNEW()))</errorConditionFormula>
    <errorDisplayField>source__c</errorDisplayField>
    <errorMessage>source value cannot be changed after record is created.</errorMessage>
</ValidationRule>