force-app/main/default/objects/Log_Entry__c/validationRules/PreventChangeTimestamp.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventChangeTimestamp</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(timestamp__c), NOT(ISNEW()))</errorConditionFormula>
    <errorDisplayField>timestamp__c</errorDisplayField>
    <errorMessage>Time stamp cannot be changed after record is created.</errorMessage>
</ValidationRule>