force-app/main/default/objects/Log_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Log__c</columns>
    <columns>source__c</columns>
    <columns>logging_level__c</columns>
    <columns>user_name__c</columns>
    <columns>timestamp__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>